[project]
name = "posts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standart]>=0.135.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "redis>=7.2.1",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]
